// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Stepper /> should display a different icon per step 1`] = `
<div>
  <div>
    <div
      class="junipero stepper"
    >
      <div
        class="step active"
      >
        <div
          class="content"
        >
          <div
            class="step-icon"
          />
          <div
            class="junipero extra step-details"
          >
            <span>
              Step 1
            </span>
            <span
              class="junipero secondary name"
            >
              Description 1
            </span>
          </div>
        </div>
      </div>
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="step-icon"
          />
          <div
            class="junipero extra step-details"
          >
            <span>
              Step 2
            </span>
            <span
              class="junipero secondary name"
            >
              Description 2
            </span>
          </div>
        </div>
      </div>
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="step-icon"
          />
          <div
            class="junipero extra step-details"
          >
            <span>
              Step 3
            </span>
            <span
              class="junipero secondary name"
            >
              Description 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Stepper /> should render step children with each status 1`] = `
<div>
  <div>
    <div
      class="junipero stepper"
    >
      <div
        class="step completed"
      >
        <div
          class="content"
        >
          <div
            class="step-icon"
          >
            <svg
              class="junipero icon check"
              height="7"
              viewBox="0 0 10 7"
              width="10"
            >
              <path
                d="M1.75259 3.49582L4.25675 6L8.24741 1"
              />
            </svg>
          </div>
          <div
            class="junipero extra step-details"
          >
            <span>
              Step 1
            </span>
            <span
              class="junipero secondary name"
            >
              Description 1
            </span>
          </div>
        </div>
      </div>
      <div
        class="step active"
      >
        <div
          class="content"
        >
          <div
            class="step-icon"
          />
          <div
            class="junipero extra step-details"
          >
            <span>
              Step 2
            </span>
            <span
              class="junipero secondary name"
            >
              Description 2
            </span>
          </div>
        </div>
      </div>
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="step-icon"
          />
          <div
            class="junipero extra step-details"
          >
            <span>
              Step 3
            </span>
            <span
              class="junipero secondary name"
            >
              Description 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Stepper /> should render steps prop with each status 1`] = `
<div>
  <div>
    <div
      class="junipero stepper"
    >
      <div
        class="step completed"
      >
        <div
          class="content"
        >
          <div
            class="step-icon"
          >
            <svg
              class="junipero icon check"
              height="7"
              viewBox="0 0 10 7"
              width="10"
            >
              <path
                d="M1.75259 3.49582L4.25675 6L8.24741 1"
              />
            </svg>
          </div>
          <div
            class="junipero extra step-details"
          >
            <span>
              Step 1
            </span>
            <span
              class="junipero secondary name"
            >
              Description 1
            </span>
          </div>
        </div>
      </div>
      <div
        class="step active"
      >
        <div
          class="content"
        >
          <div
            class="step-icon"
          />
          <div
            class="junipero extra step-details"
          >
            <span>
              Step 2
            </span>
            <span
              class="junipero secondary name"
            >
              Description 2
            </span>
          </div>
        </div>
      </div>
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="step-icon"
          />
          <div
            class="junipero extra step-details"
          >
            <span>
              Step 3
            </span>
            <span
              class="junipero secondary name"
            >
              Description 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
